@@ -1,3 +1,9 @@
+2007-10-21  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet.c
+		- (other_wireless_response_cb): do something with the connection the
+			user specified in the other wireless network dialog
+
 2007-10-19  Dan Williams  <dcbw@redhat.com>
 
 	The applet needs to save only _paths_ to certificates, not the actual
